llvm/dev/intcallchain3.llvm.bc.err
/usr/lib/llvm-3.8/bin/llvm-as: llvm/dev/intcallchain3.llvm:11:1: error: expected instruction opcode
}
^
